--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,10 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% include('headers/externalCSS.html.twig') %}
+        {% block stylesheets %}
+            <link rel="stylesheet" href="{{ asset('css/styles.css' ) }}">
+        {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+            {% block header %}{% endblock %}
+        {% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
+    <footer>
+        {% include('footers/footerSimple.html.twig') %}
+    </footer>
 </html>
