Afegida pàgina principal, login y connexió Entitat-BD, ja son dades persistents

--- a/templates/main/logout.html.twig
+++ b/templates/main/logout.html.twig
@@ -9,7 +9,7 @@
     {% endblock %}
 
     <main role="main" class="container">
-        <h1 class="mt-5">Contingut</h1>
+        <h1 class="mt-5">Logout Correcte</h1>
     </main>
 
 {% endblock %}
