--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -9,7 +9,7 @@
     {% endblock %}
 
     <main role="main" class="container">
-        <h1 class="mt-5">Contingut</h1>
+        <h1 class="mt-5">Benvingut a la Web App de la nostra empresa</h1>
     </main>
 
 {% endblock %}
