--- a/templates/modals/login.html.twig
+++ b/templates/modals/login.html.twig
@@ -1,11 +1,11 @@
-{% block modal %}
+{% block login_modal %}
 
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title h3 mb-3 font-weight-normal">Please sign in</h1>
+                <h1 class="modal-title h3 mb-2 font-weight-normal">Iniciar sessió</h1>
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
             <form class="form-signin" action="{{ path('login') }}" method="POST">
@@ -22,7 +22,7 @@
                     <!-- <p id="message" class= "message-error"></p> -->
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" id="bttnLogin" class="btn btn-lg btn-primary btn-block">Sign in</button>
+                    <button type="submit" id="bttnLogin" class="btn btn-lg btn-primary btn-block">Login</button>
                 </div>
 
             </form>
