--- a/templates/menu/navBar.html.twig
+++ b/templates/menu/navBar.html.twig
@@ -2,7 +2,7 @@
 <header>
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand">Projecte Final</a>
+        <a>Projecte Final</a>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
