Corregit color lletra en navBar, cambiats comentaris HTML a PHP

--- a/templates/modals/register.html.twig
+++ b/templates/modals/register.html.twig
@@ -38,8 +38,8 @@
     </div>
 </div>
 
-<!-- <script> </script> -->
-<!-- AQUI ANIRÁ CODI JS PER REALITZAR PETICIÓ AJAX EN CAS DE NO VOLER REDIRECCIONAR A UNA PAGINA -->
+{#<script> </script> #}
+{# AQUI ANIRÁ CODI JS PER REALITZAR PETICIÓ AJAX EN CAS DE NO VOLER REDIRECCIONAR A UNA PAGINA #}
 
 
 {% endblock %}
