--- a/templates/menu/navBar.html.twig
+++ b/templates/menu/navBar.html.twig
@@ -1,8 +1,13 @@
 {% block navBar %}
+
+    {%  block stylesheets %}
+        <link rel="stylesheet" href="{{ asset('css/navbar.css' ) }}">
+    {% endblock %}
+
 <header>
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a>Projecte Final</a>
+        <a class="navbar-brand">Projecte Final</a>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
