Instal·lat Webpack, Assets, Yarn, importats plugins de plantilla i preparat per frontend

--- a/templates/dashboard/profile.html.twig
+++ b/templates/dashboard/profile.html.twig
@@ -19,7 +19,7 @@
                     <div class="profile-img">
                         <!-- EXEMPLE PER CONSEGUIR FOTO DE PERFIL SEGONS EL NOM DE L'EMPLEAT UTILITZANT ASSETS -->
                         <!-- <img src="{{ asset('images/profiles/' ~ employee.name ) }}" alt="Foto de {{ employee.name }}"/> -->
-                        <img src="{{ asset('/images/profiles/profile_image_stock01.png' ) }}" alt="Foto de {{ employee.name }}"/>
+                        <img src="{{ asset('./images/profiles/profile_image_stock01.png' ) }}" alt="Foto de {{ employee.name }}"/>
                         <div class="file btn btn-lg btn-primary">
                             Actualitza la teva fotografia
                         </div>
