--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,22 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% include('headers/externalCSS.html.twig') %}
+        {% include('headers/templateCSS.html.twig') %}
         {% block stylesheets %}
-            <link rel="stylesheet" href="{{ asset('css/styles.css' ) }}">
+            {{ encore_entry_link_tags('app') }}
         {% endblock %}
     </head>
-    <body>
+    <body class="hold-transition sidebar-mini layout-fixed">
         {% block body %}
             <h3>SI ESTAS VEIENT AQUEST TEXT, LA RENDERITZACIÓ NO HA CARREGAT EL BODY</h3>
-            {% block header %}{% endblock %}
         {% endblock %}
-        {% block javascripts %}{% endblock %}
+        <!-- JSSSSSSSSSSSS -->
+        {% block javascripts %}
+            {{ encore_entry_script_tags('app') }}
+        {% endblock %}
+
     </body>
-    {% block footer %}
-        <footer>
-            {% include('footers/footerSimple.html.twig') %}
-        </footer>
-    {% endblock %}
 
 </html>
